Rename img de fond cause minification

--- a/style.css
+++ b/style.css
@@ -830,7 +830,7 @@ h4 {
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
+    background-image: url("img/lines-h2-bg-min.png");
 }
 
 .bg-banniere {
