--- a/style.css
+++ b/style.css
@@ -757,6 +757,11 @@ h4 {
     margin-bottom: 24px;
 }
 
+.portphoto {
+    width: 100%;
+    margin-bottom: 24px;
+}
+
 .portfolio-row {
     margin-bottom: 44px;
     margin-top: 50px;
@@ -840,6 +845,10 @@ h4 {
     background-image: url("img/la-chouette-agence-banniere-min.jpg");
 }
 
+.bg-banniere img {
+    width: 17.5%;
+}
+
 .bg-presentation {
     background-image: url("img/image-de-presentation-min.jpg");
 }
@@ -860,6 +869,10 @@ header {
 #logo {
     padding-top: 31px;
     margin-left: 450px;
+}
+
+#logo img {
+    width: 214px;
 }
 
 .navbar {
